[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-transfer-learning-debugger"
version = "0.1.0"
description = "A debugging tool for PyTorch transfer learning models"
authors = [
    {name = "Zach Wolpe", email = "zachcolinwolpe@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "tqdm",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/yourusername/pytorch-transfer-learning-debugger"